fix saleperson history list not showing

--- a/ghi/app/src/index.css
+++ b/ghi/app/src/index.css
@@ -82,6 +82,10 @@ code {
   border-radius: .5em;
 }
 
+.card:hover {
+  transform: scale(1.01);
+}
+
 .card-body {
   padding: 1rem 1rem 0em 1rem;
 }
